# Feature-Engine

./: .gitignore  CMakeLists.txt  README.md
Header Files/: Camera.h  Singleton.h
Header Files/Rendering/: Material.h  Shader.h
resources/shaders/: default.frag  default.vert  shadowMap.vert  simple.frag  simple.vert
src/: glad.c  imgui.ini  main.cpp
src/Rendering/: Shader.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
